--- a/bai1-tao layout/style.css
+++ b/bai1-tao layout/style.css
@@ -1,50 +1,80 @@
+body{
+    margin: 0;
+    
 
+}
+.wrapper{
+    width: 960px;
+    height: auto;
+    margin: 0 auto;
+    padding : 10px;
+    border: 1px solid black;
+    background-color: yellow;
+}
 header{
     background-color: red;
     height: 200px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content:center;
     width: 100%;
-}
-p{
-    position:relative;
-    top: 50%;
 }
 nav{ 
     background-color: blue;
-    text-align: center;
-    height: 200px;
+    height: 100px;
     width: 100%;
-}
-.container{
-    padding: 0%;
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    color:white;
+    margin-top:10px;
+}
+main{
+    width: 100%;
+    height: 600px;
+    display: flex;
+    margin-top:10px;
+}
+.main-content{
+    display: flex;
     text-align: center;
+    flex:70%;
+    flex-direction: column;
+    margin-right: 10px;
+    
 }
-.container_1{
-    flex: 70%;
-}
+
 section{
-    background-color: yellow;
-    text-align: center;
-    height: 200px;
+    background-color: rgb(243, 11, 231);
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    margin-bottom: 10px;
 }
 article{
     background-color: green;
     text-align: center;
-    height: 200px;
+    height: 50%;
     color:white;
+    display: flex;
+    align-items: center;
+    justify-content:center;
 }
 aside{
     background-color: black;
-    text-align: center;
-    height: 400px;
-    width: 30%;
-    margin-top:17px;
+    height: 100%;
+    flex: 30%;
+    display: flex;
+    align-items: center;
+    justify-content:center;
     color:white;
 }
 footer{
     background-color: pink;
-    text-align: center;
+    display: flex;
     height: 200px;
+    align-items: center;
+    justify-content:center;
+    margin-top: 10px;
 }
