--- a/bai2-tao layout/style.css
+++ b/bai2-tao layout/style.css
@@ -1,28 +1,45 @@
-* {
-    box-sizing: border-box;
-  }
+.web{
+    margin: 0px;
+    height: auto;
+    width: 700px;
+    align-items: center;
+    margin: 0 auto;
+}
 header{
-    background-color: rgb(72, 95, 95);
+    background-color: #666666;
     color:white;
     text-align: center;
-    height: 100px;
-    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:100px;
+    font-size: 30px;
 }
 .container{
     display: flex;
+    height: 300px;
+}
+nav{
+    flex:20%;
+    background-color: rgb(204,204,204);
+    padding:20px;
 }
 nav ul{
     list-style: none;
 }
-nav ul li a{
-    text-decoration: none;
-}
 article{
-    margin-left: 40px;
+    background-color: rgb(241,241,241);
+    flex: 80%;
+    padding:0px;
 }
+
 footer{
-    background-color: rgb(72, 95, 95);
+    background-color: rgb(119,119,119);
     color:white;
-    font-size: 30px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
     text-align: center;
 }
